--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.0",
     "node-sass": "^4.10.0",
     "react": "^16.5.2",
