--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^4.0.1",
     "cookie-session": "^2.0.0-beta.3",
     "create-react-app": "^2.0.4",
+    "event-stream": "^3.3.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.18",
