--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^4.0.1",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.5",
     "create-react-app": "^2.0.4",
     "event-stream": "^3.3.4",
     "express": "^4.16.3",
@@ -26,6 +28,7 @@
     "mongoose": "^5.2.18",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "request": "^2.88.0"
   }
 }
