--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-spotify": "^1.0.1",
     "request": "^2.88.0"
   }
 }
