--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-spotify": "^1.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
