--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "2.0.5",
     "react-youtube": "^7.9.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
