--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.18",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
