--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "event-stream": "^3.3.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "google-auth-library": "^4.2.2",
+    "googleapis": "^40.0.0",
     "mongoose": "^5.2.18",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-spotify": "^1.0.1",
+    "query-string": "^6.7.0",
     "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0",
     "youtube-search": "^1.1.4"
