--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-auth-library": "^4.2.2",
     "googleapis": "^40.0.0",
     "mongoose": "^5.2.18",
+    "lodash": ">=4.17.13",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
