--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon --inspect index.js",
+    "start": "node app.js",
+    "server": "nodemon --inspect app.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
